--- a/views/layouts/masterLayouts.ejs
+++ b/views/layouts/masterLayouts.ejs
@@ -96,7 +96,40 @@
           <div class="col-lg-3 col-md-6">
             <div class="single-footer-widget">
               <a href="#">
-                <img src="/blog/assets/img/logo-3.png" alt="image" />
+                <!-- <img src="/blog/assets/img/logo-3.png" alt="image" /> -->
+                <svg
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="200"
+                  height="70.73132147302849"
+                  viewBox="0 0 370.0006959831751 87.23546057610078"
+                  class="css-1j8o68f"
+                >
+                  <defs id="SvgjsDefs4064"></defs>
+                  <g
+                    id="SvgjsG4065"
+                    featurekey="symbolFeature-0"
+                    transform="matrix(1.1963118646827278,0,0,1.1963118646827278,-1.3159432222847856,-16.245523705198472)"
+                    fill="#1E90FF"
+                  >
+                    <path
+                      xmlns="http://www.w3.org/2000/svg"
+                      d="M98.9,43.4c0,1.5-1.2,2.7-2.7,2.7H85c-1.5,0-2.7-1.2-2.7-2.7v-0.1c0-1.5,1.2-2.7,2.7-2.7h11.2  C97.7,40.6,98.9,41.8,98.9,43.4L98.9,43.4z M93.1,27.2l-10.6,4.2c-1.3,0.5-2,2-1.6,3.4c0.5,1.5,2.1,2.3,3.6,1.7l10.6-4.2  c1.3-0.5,2-2,1.6-3.4C96.2,27.4,94.6,26.6,93.1,27.2z M82.5,55.3l10.6,4.2c1.5,0.6,3.1-0.2,3.6-1.7c0.4-1.4-0.3-2.8-1.6-3.4  l-10.6-4.2c-1.5-0.6-3.1,0.2-3.6,1.7C80.4,53.3,81.1,54.8,82.5,55.3z M76,43.8c0,4.4-2.8,8.1-6.6,9.6v17.7c0,1.6-1.1,3-2.7,3.2  c-1.8,0.2-3.3-1.1-3.4-2.8c-9.7-9.2-23.5-12.7-31.9-14.1v2.9h-6.3L28.3,85l-1.2,0.3l-4,0.9l-1.2,0.3l-7.9-26.2h-1.7  c-3.8,0-6.9-3.1-6.9-6.9v-2.6H3.4c-1.3,0-2.3-1-2.3-2.3v-8.6c0-1.3,1-2.3,2.3-2.3h2.1v-3.1c0-3.8,3.1-6.9,6.9-6.9h19.1v2.9  c8.4-1.4,22.2-4.9,31.9-14.1c0.1-1.7,1.6-3,3.4-2.8c1.6,0.2,2.7,1.6,2.7,3.2v17.6C73.3,35.7,76,39.4,76,43.8z M24.2,34.8H12.7V53  h11.5V34.8z"
+                      fill="#1E90FF"
+                    ></path>
+                  </g>
+                  <g
+                    id="SvgjsG4066"
+                    featurekey="nameFeature-0"
+                    transform="matrix(1.1815289478135944,0,0,1.1815289478135944,135.15280014266762,20.33900676381622)"
+                    fill="#FFFFFF"
+                  >
+                    <path
+                      d="M31.953 38.5937 l6.5625 0 l0 -27.422 l-6.5625 9.6094 l0 17.813 z M38.516 1.4059999999999988 l-7.0313 0 l-11.484 17.813 l-11.406 -17.813 l-7.0313 0 l0 37.188 l6.5625 0 l0 -26.406 l11.719 17.578 l0.23438 0 l10.234 -15.156 c0.052109 -0.20836 2.7865 -4.6094 8.2031 -13.203 z M44.8281 38.5937 l6.4844 0 l0 -19.922 l-6.4844 -9.1406 l0 29.063 z M70.76599999999999 1.4059999999999988 l0 25.703 l-18.359 -25.703 l-7.0313 0 l26.406 37.188 l5.3906 0 l0 -37.188 l-6.4063 0 z M88.0938 1.4059999999999988 l27.813 0 l0 5.9375 l-27.813 0 l0 -5.9375 z M88.0938 32.6562 l27.734 0 l0 5.9375 l-27.734 0 l0 -5.9375 z M88.0938 16.875 l25.078 0 l0 5.8594 l-25.078 0 l0 -5.8594 z M130.5 1.4059999999999988 l-6.0156 0 l7.5781 37.188 l6.5625 0 l-4.8438 -22.891 z M155.813 1.4059999999999988 l-4.375 15.547 l2.9688 11.328 l7.1875 -26.875 l-5.7813 0 z M146.359 12.812000000000001 l-0.46875 -1.9531 l-2.5 -9.4531 l-3.3594 11.094 l-0.15625 0.3125 l-1.25 4.375 l2.3438 10.469 l1.4844 -5.1563 l3.8281 16.094 l6.6406 0 l-5.7813 -22.891 z M188.922 1.4059999999999988 c-2.8646 0 -5.5209 0.4686 -7.9688 1.4061 c-2.3959 0.9375 -4.4792 2.2396 -6.2501 3.9063 c-1.7188 1.5625 -3.0729 3.5416 -4.0625 5.9375 c-0.83336 2.0313 -1.3021 4.2448 -1.4063 6.6406 l0 2.3438 l6.875 0 l0 -2.3438 c0.10414 -1.7709 0.39063 -3.2031 0.85938 -4.2969 c0.625 -1.5104 1.4844 -2.8645 2.5781 -4.0624 c1.3021 -1.1979 2.6563 -2.0833 4.0625 -2.6562 c1.6146 -0.625 3.3855 -0.9375 5.3126 -0.9375 l9.8438 0 l0 -5.9375 l-9.8438 0 z M191.891 18.984 l0.000076294 1.4843 l0.078125 0 c-0.10414 1.6666 -0.41664 3.2031 -0.9375 4.6094 c-0.67711 1.6146 -1.5365 2.9427 -2.5781 3.9844 c-1.1459 1.1459 -2.5 2.0313 -4.0625 2.6563 c-1.6146 0.625 -3.3855 0.9375 -5.3126 0.9375 l-9.8438 0 l0 5.9375 l9.8438 0 c2.8646 0 5.5209 -0.46875 7.9688 -1.4063 c2.3959 -0.9375 4.4792 -2.2396 6.2501 -3.9063 c1.8229 -1.8229 3.177 -3.802 4.0624 -5.9374 c0.9375 -2.0834 1.4063 -4.375 1.4063 -6.875 l0 -1.4844 l-6.875 0 z"
+                      fill="#FFFFFF"
+                    ></path>
+                  </g>
+                </svg>
               </a>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
