--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -19,11 +19,11 @@
                         <tr>
                             <td>1</td>
                             <td>
-                                <a href="/articles/<% article._id %>" class="text-white">
+                                <a href="/dashboard/article/<%= article.slug %>" class="text-white">
                                     <%= article.title %>
                             </td>
                             <td>
-                                <a href="/articles/<% article._id %>" class="text-white">
+                                <a href="/dashboard/article/<%= article.slug %>" class="text-white">
                                     <%= article.summary %>
                             <td>
 
