--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -1,7 +1,7 @@
 <div class="col-md-6 grid-margin stretch-card">
   <div class="card">
     <form
-      action="/dashboard/articles"
+      action="/dashboard/add-article"
       method="POST"
       enctype="multipart/form-data"
     >
