--- a/views/admin/articles/show.ejs
+++ b/views/admin/articles/show.ejs
@@ -1,50 +1,18 @@
-<div class="col-lg-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Inverse table</h4>
-            <p class="card-description">articles <code><%= category.sulg  %> </code></p>
-            <table class="table table-dark">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>عنوان</th>
-                        <th>تاریخ</th>
-                        <th>وضعیت</th>
-                        <th>دسته بندی</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% for(let article of articles) {%>
-
-                        <tr>
-                            <td>1</td>
-                            <td>
-                                <a href="/articles/<% article._id %>" class="text-white">
-                                    <%= article.title %>
-                            </td>
-                            <td>
-                                <a href="/articles/<% article._id %>" class="text-white">
-                                    <%= article.summary %>
-                            <td>
-
-                                <td>
-                                    <a href="/dashboard/categories/<%= JSON.parse(JSON.stringify(article.category))?.slug %>" class="text-white">
-                                        <%# console.log(JSON.parse(JSON.stringify(article.category))?.title); %> 
-                                        <%= JSON.parse(JSON.stringify(article.category))?.title %>
-                                <td>
-
-                                <a href="/dashboard/edit-article/<%= article._id %>"
-                                    class="btn btn-sm btn-info">ویرایش</a>
-                                <a href="/dashboard/delete-article/<%= article._id %>"
-                                    class="btn btn-sm btn-danger">حذف</a>
-                            </td>
-                            
-                        </tr>
-                        <% } %>
-                </tbody>
-            </table>
-
-        </div>
-
+<div class="col-md-6 grid-margin stretch-card">
+  <div class="card p-4">
+    <img
+      class="card-img-top img-thumbnail"
+      src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+      alt="Card image cap"
+    />
+    <div class="card pt-4">
+      <h4 class="card-title">عنوان : <%= article.title %></h4>
     </div>
+    <p class="card-description">
+      پست شده <%= formatDate(article.createdAt) %><code
+        ><%= article.summary %></code
+      >
+    </p>
+    <p><%- article.body %></p>
+  </div>
 </div>
