--- a/views/admin/categories/show.ejs
+++ b/views/admin/categories/show.ejs
@@ -1,31 +1,43 @@
 <div class="col-lg-12 grid-margin stretch-card">
   <div class="card">
     <div class="card-body">
-      <h4 class="card-title">Inverse table</h4>
+      <h4 class="card-title">مقاله های این دسته </h4>
       <p class="card-description">articles <code><%= category.sulg  %> </code></p>
       <table class="table table-dark">
         <thead>
           <tr>
             <th>#</th>
             <th>عنوان</th>
-            <th>تاریخ</th>
-            <th>وضعیت</th>
+            <th>توضیحات</th>
+            <th>تاریخ پست</th>
+            <th>تنظیمات</th>
           </tr>
         </thead>
         <tbody>
-          <% for(let articles of ariclesCategory) {%>
-
-            <tr>
-              <td>1</td>
-              <td>
-                <a href="/articles/<% articles._id %>" class="text-white">
-                  <%= articles.title %>
-              </td>
-            </tr>
-
-
-            </tr>
-            <% } %>
+          <% for(let articlesCat of ariclesCategory) {%>
+           <% articlesCat.articles.forEach(article => { %>
+              <tr>
+                <td>1</td>
+                <td>
+                  <a href="/articles/" class="text-white">
+                    <%= article.title %>
+                    <%# console.log(articlesCat.articles); %> 
+                </td>
+                <td>
+                  <%- truncate(article.body,80) %>
+                </td>
+                <td>
+                  <%= formatDate(article.createdAt) %>
+                </td>
+                <td>
+                  <a href="/dashboard/edit-article/<%= article._id %>"
+                    class="btn btn-sm btn-info">ویرایش</a>
+                <a href="/dashboard/articles/<%= article._id %>"
+                    class="btn btn-sm btn-danger">حذف</a>
+                </td>
+              </tr>
+              <%}); %> 
+          <% } %>
         </tbody>
       </table>
 
