--- a/views/layouts/masterLayouts.ejs
+++ b/views/layouts/masterLayouts.ejs
@@ -26,7 +26,7 @@
       defer
     ></script>
 
-    <title><%= pageTitle %></title>
+    <title>صفحه اصلی</title>
     <link rel="icon" type="image/png" href="blog/assets/img/favicon.png" />
   </head>
   <body>
