--- a/views/admin/articles/show.ejs
+++ b/views/admin/articles/show.ejs
@@ -2,7 +2,7 @@
   <div class="card p-4">
     <img
       class="card-img-top img-thumbnail"
-      src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+      src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
       alt="Card image cap"
     />
     <div class="card pt-4">
