--- a/views/article.ejs
+++ b/views/article.ejs
@@ -264,7 +264,7 @@
             <div class="col-lg-8 col-md-12">
                 <div class="blog-details-desc">
                     <div class="article-image">
-                        <img src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+                        <img src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
                             alt="image" />
 
                         </a>
