--- a/views/includes/blog/blogPost.ejs
+++ b/views/includes/blog/blogPost.ejs
@@ -2,7 +2,7 @@
 <div class="card mt-4 mb-4">
   <img
     class="card-img-top"
-    src="http://localhost:3000/uploads/thumbnail/<%=post.thumbnail %> "
+    src="https://khodaverdi-news.herokuapp.com/uploads/thumbnail/<%=post.thumbnail %> "
     alt="Card image cap"
   />
   <div class="card-body">
