--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <div class="single-main-news">
           <a href="/article/<%= article._id %>">
             <img
-              src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+              src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
               alt="image"
             />
           </a>
@@ -35,7 +35,7 @@
         <div class="single-main-news-inner">
           <a href="#">
             <img
-              src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+              src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
               alt="image"
             />
           </a>
@@ -101,7 +101,7 @@
                 <div class="popular-news-image">
                   <a href="#">
                     <img
-                      src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+                      src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
                       alt="image"
                     />
                   </a>
@@ -127,7 +127,7 @@
                     <div class="post-image">
                       <a href="#">
                         <img
-                          src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+                          src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
                           alt="image"
                         />
                       </a>
@@ -160,7 +160,7 @@
                 <div class="politics-news-image">
                   <a href="#">
                     <img
-                      src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+                      src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
                       alt="image"
                     />
                   </a>
@@ -186,7 +186,7 @@
                     <div class="politics-news-image">
                       <a href="#">
                         <img
-                          src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+                          src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
                           alt="image"
                         />
                       </a>
@@ -659,7 +659,7 @@
             <article class="item">
               <a href="/article/<%= article._id %> " class="thumb">
                 <img
-                  src="http://localhost:3000/uploads/thumbnails/<%= article.image %>"
+                  src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
                   alt="image"
                 />
               </a>
