--- a/views/post.ejs
+++ b/views/post.ejs
@@ -264,7 +264,7 @@
             <div class="col-lg-8 col-md-12">
                 <div class="blog-details-desc">
                     <div class="article-image">
-                        <img src="http://localhost:3000/uploads/thumbnail/<%=post.thumbnail %>"
+                        <img src="https://khodaverdi-news.herokuapp.com/uploads/thumbnail/<%=post.thumbnail %>"
                             alt="image" />
 
                         </a>
