--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <div class="single-main-news">
           <a href="/article/<%= article._id %>">
             <img
-              src="../uploads/thumbnails/<%= article.image %>"
+              src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
               alt="image"
             />
           </a>
