--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
         <div class="single-main-news-inner">
           <a href="#">
             <img
-              src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
+              src="/uploads/thumbnails/<%= article.image %>"
               alt="image"
             />
           </a>
@@ -101,7 +101,7 @@
                 <div class="popular-news-image">
                   <a href="#">
                     <img
-                      src="https://khodaverdi-news.herokuapp.com/uploads/thumbnails/<%= article.image %>"
+                      src="/uploads/thumbnails/<%= article.image %>"
                       alt="image"
                     />
                   </a>
