--- a/views/resume/index.ejs
+++ b/views/resume/index.ejs
@@ -224,23 +224,23 @@
                 </h2>
                 <div class="row animation-translate animation-item-2">
                   <div class="col-12 col-md-6">
-                    <strong class="progress-label">CSS</strong>
+                    <strong class="progress-label">Node.js</strong>
                     <div class="progress progress-animated mb-9">
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 75%"
+                        style="width: 60%"
                         aria-valuenow="75"
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
                     </div>
-                    <strong class="progress-label">Html</strong>
+                    <strong class="progress-label">React</strong>
                     <div class="progress progress-animated mb-9">
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 80%"
+                        style="width: 10%"
                         aria-valuenow="80"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -251,7 +251,7 @@
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 70%"
+                        style="width: 85%"
                         aria-valuenow="70"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -259,7 +259,9 @@
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
-                    <strong class="progress-label">Adobe Premiere</strong>
+                    <strong class="progress-label"
+                      >Data-Base / MongoDB / mySql</strong
+                    >
                     <div class="progress progress-animated mb-9">
                       <div
                         class="progress-bar"
@@ -275,7 +277,7 @@
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 87%"
+                        style="width: 45%"
                         aria-valuenow="87"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -286,7 +288,7 @@
                       <div
                         class="progress-bar"
                         role="progressbar"
-                        style="width: 80%"
+                        style="width: 45%"
                         aria-valuenow="80"
                         aria-valuemin="0"
                         aria-valuemax="100"
@@ -356,7 +358,7 @@
                 </h2>
                 <div class="timeline timeline-animated">
                   <div class="timeline-item">
-                    <span class="timeline-date">2016&nbsp;–&nbsp;now</span>
+                    <span class="timeline-date">2020&nbsp;–&nbsp;now</span>
                     <h3 class="timeline-title">Freelance</h3>
                     <p class="timeline-text">Full stack web developer</p>
                   </div>
