--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -7,7 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Connect Plus</title>
+    
+    <title><%= pageTitle %></title>
     <!-- plugins:css -->
     <link
       rel="stylesheet"
